fix: overflow

--- a/assets/scss/_common/list.scss
+++ b/assets/scss/_common/list.scss
@@ -62,7 +62,7 @@
 
 .tree {
     margin-left: -2em;
-    overflow: auto;
+    overflow: auto hidden;
     white-space: nowrap;
 }
 .category-item {
